# infinity-hacks

./: .env.example  .gitignore  ARCHITECTURE_PRESENTATION.md  DEMO_SCRIPT.md  HACKATHON_LIVE_DEMO.py  LICENSE  MANIFEST.in  OUMI_API_GUIDE.md  PYPI_UPLOAD_GUIDE.md  README.md  TASKS.md  build_package.py  demo_cli_enhanced.py  demo_neurologist.py  demo_surgeon.py  llm_jidge.md  oum_interi.md  oum_train.md  oumi_dataset.md  oumi_eval.md  oumi_hospital_cli.py  pyproject.toml  requirements.txt  standalone_test.py  test_benchmarks.py  test_cli_enhanced.py  test_diagnostician.py  test_diagnostician_simple.py  test_neurologist_components.py  test_neurologist_simple.py  test_pharmacist.py  test_pharmacist_simple.py  test_surgeon_components.py  test_surgeon_simple.py  upload_to_pypi.py
demo_outputs/: cure_dataset.jsonl  neurologist_demo_summary.md  neurologist_report_caution_treatment.json  neurologist_report_critical_treatment.json  neurologist_report_safe_treatment.json
demo_outputs/recipes/: bias_moderate_20251212_215753.yaml  bias_moderate_20251212_215753_metadata.json  hallucination_high_20251212_215753.yaml  hallucination_high_20251212_215753_metadata.json  safety_critical_20251212_215753.yaml  safety_critical_20251212_215753_metadata.json  surgeon_demo_summary.md
src/: __init__.py  cli.py  cli_enhanced.py
src/agents/: __init__.py  coordinator.py  diagnostician.py  neurologist.py  pharmacist.py  pharmacist_methods.py  surgeon.py
src/benchmarks/: __init__.py  skill_tests.py
src/oumi_hospital/: __init__.py  cli.py  core.py  demo.py
src/oumi_hospital/agents/: coordinator.py
src/oumi_hospital/benchmarks/: __init__.py  community_package.py  dataset_utils.py  judges.py  red_team.py
src/oumi_hospital/utils/: logging_config.py
src/utils/: __init__.py  console.py  oumi_integration.py
