[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oumi-hospital"
version = "1.0.1"
description = "ðŸ¥ LLM-Powered Multi-Agent AI Model Repair System - Revolutionary autonomous diagnosis, treatment, and healing of unsafe AI models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Oumi Hospital Team", email = "contact@oumi-hospital.ai"}
]
keywords = ["ai", "llm", "model-repair", "safety", "alignment", "oumi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "groq>=0.4.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "datasets>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/soumyacodes007/infinity-hacks"
Repository = "https://github.com/soumyacodes007/infinity-hacks"
Documentation = "https://github.com/soumyacodes007/infinity-hacks/blob/master/README.md"
"Bug Tracker" = "https://github.com/soumyacodes007/infinity-hacks/issues"

[project.scripts]
oumi-hospital = "oumi_hospital.cli:main"
oumi-hospital-demo = "oumi_hospital.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["oumi_hospital"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=oumi_hospital",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "-v"
]